--- a/workspace/FRCRobot/.classpath
+++ b/workspace/FRCRobot/.classpath
@@ -11,5 +11,6 @@
 			<attribute name="javadoc_location" value="file:/C:/Users/RoboKnights/navx-mxp/java/docs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
